button overlap bug fixed

--- a/style.css
+++ b/style.css
@@ -74,12 +74,7 @@ body {
 
 .btn1-section {
     width: 100%;
-    margin-left: 35%;
-}
-
-.btn2-section {
-    width: 100%;
-    margin-left: 45%;
+    margin-left: 50%;
 }
 
 
